Implemented ZeusCommand